<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_popular_movies"
        android:title="@string/menu_option_popular_movies"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_top_rated_movies"
        android:title="@string/menu_option_top_rated"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favorite_movies"
        android:title="@string/menu_option_favorite_movies"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_all_favorites"
        android:title="@string/menu_option_delete_all_favorites"
        app:showAsAction="never"/>

</menu>