<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_label_text_view"
            style="@style/label_text_view"
            android:text="@string/movie_title_label"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title_text_view"
            style="@style/large_text_view"
            app:layout_constraintLeft_toRightOf="@id/poster_image_view"
            app:layout_constraintTop_toBottomOf="@id/title_label_text_view"
            tools:text="movie title"/>

        <ImageView
            android:id="@+id/poster_image_view"
            style="@style/poster"
            android:contentDescription="@string/content_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"/>

        <TextView
            android:id="@+id/release_date_label_text_view"
            style="@style/label_text_view"
            android:text="@string/release_date_label"
            app:layout_constraintLeft_toRightOf="@id/poster_image_view"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            />

        <TextView
            android:id="@+id/release_date_text_view"
            style="@style/small_text_view"
            app:layout_constraintLeft_toRightOf="@id/poster_image_view"
            app:layout_constraintTop_toBottomOf="@id/release_date_label_text_view"
            tools:text="2018-04-20"/>

        <TextView
            android:id="@+id/average_vote_label_text_view"
            style="@style/label_text_view"
            android:text="@string/average_vote_label"
            app:layout_constraintLeft_toRightOf="@id/poster_image_view"
            app:layout_constraintTop_toBottomOf="@id/release_date_text_view"/>

        <TextView
            android:id="@+id/average_vote_text_view"
            style="@style/small_text_view"
            app:layout_constraintLeft_toRightOf="@id/poster_image_view"
            app:layout_constraintTop_toBottomOf="@id/average_vote_label_text_view"
            tools:text="6.5"/>

        <TextView
            android:id="@+id/overview_label_text_view"
            style="@style/label_text_view"
            android:text="@string/overview_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster_image_view"/>

        <TextView
            android:id="@+id/overview_text_view"
            style="@style/large_text_view"
            android:paddingBottom="@dimen/bottom_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview_label_text_view"
            tools:text="overview"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>